--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mobinsadegii.ir</title>
-    <link rel="icon" type="image/png" href="assets/images/favicon.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/favicon.png" sizes="16x16">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.green.css">
+    <link rel="stylesheet" href="carousel.css">
+    <link rel="stylesheet" href="green.css">
 
 </head>
 
