--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                         <li><a href="#contact">تماس با من</a></li>
                         <li class="darkmode-btn d-desktop">
                             <a href="javascript:void(0)">
-                                <img src="assets/images/brightness.svg" alt="brightness" class="bright">
-                                <img src="assets/images/moon.svg" alt="moon" class="dark"> </a>
+                                <img src="images/brightness.svg" alt="brightness" class="bright">
+                                <img src="images/moon.svg" alt="moon" class="dark"> </a>
                         </li>
                     </ul>
                 </div>
                 <div class="darkmode-btn d-mobile"><a href="javascript:void(0)">
-                        <img src="assets/images/brightness.svg" alt="brightness" class="bright">
-                        <img src="assets/images/moon.svg" alt="moon" class="dark"> </a></div>
+                        <img src="images/brightness.svg" alt="brightness" class="bright">
+                        <img src="images/moon.svg" alt="moon" class="dark"> </a></div>
             </nav>
         </div>
     </header>
