--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                         <li><a href="#contact">تماس با من</a></li>
                         <li class="darkmode-btn d-desktop">
                             <a href="javascript:void(0)">
-                                <img src="images/brightness.svg" alt="brightness" class="bright">
-                                <img src="images/moon.svg" alt="moon" class="dark"> </a>
+                                <img src="brightness.svg" alt="brightness" class="bright">
+                                <img src="moon.svg" alt="moon" class="dark"> </a>
                         </li>
                     </ul>
                 </div>
                 <div class="darkmode-btn d-mobile"><a href="javascript:void(0)">
-                        <img src="images/brightness.svg" alt="brightness" class="bright">
-                        <img src="images/moon.svg" alt="moon" class="dark"> </a></div>
+                        <img src="brightness.svg" alt="brightness" class="bright">
+                        <img src="moon.svg" alt="moon" class="dark"> </a></div>
             </nav>
         </div>
     </header>
@@ -88,8 +88,8 @@
                         </div>
                     </div>
                     <div class="col-right">
-                        <img class="image-main" src="assets/images/InShot_۲۰۲۴۱۱۱۷_۰۰۴۰۵۵۶۸۵.jpg" alt="user image">
-                        <img class="image-darkmode" src="assets/images/InShot_۲۰۲۴۱۱۱۷_۰۰۴۰۵۵۶۸۵.jpg" alt="user image">
+                        <img class="image-main" src="InShot_۲۰۲۴۱۱۱۷_۰۰۴۰۵۵۶۸۵.jpg" alt="user image">
+                        <img class="image-darkmode" src="InShot_۲۰۲۴۱۱۱۷_۰۰۴۰۵۵۶۸۵.jpg" alt="user image">
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
             <div class="container">
                 <div class="about-inner d-flex">
                     <div class="about-col-left">
-                        <img class="mobin" src="assets/images/images.jpg" alt="about">
+                        <img class="mobin" src="images.jpg" alt="about">
                     </div>
                     <div class="about-col-right">
                         <h2 class="about-heading">درباره من</h2>
@@ -232,7 +232,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color1 d-flex">
-                            <img src="assets/images/services/ui-design.svg" alt="ui design">
+                            <img src="services/ui-design.svg" alt="ui design">
                         </div>
                         <h3>طراحی UI/UX</h3>
                         <p>با طراحی رابط کاربری (UI) زیبا و تجربه کاربری (UX) هوشمند، کاری می‌کنم که بازدیدکننده‌ها نه‌تنها بمونن، بلکه عاشق تعامل با سایت یا اپلیکیشن شما بشن. از وایرفریم تا طراحی نهایی، همه چیز با دقت، سادگی و جذابیت انجام می‌شه تا برند شما بدرخشه.</p>
@@ -240,7 +240,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color2 d-flex">
-                            <img src="assets/images/services/web-dev.svg" alt="web dev">
+                            <img src="services/web-dev.svg" alt="web dev">
                         </div>
                         <h3>توسعه وب</h3>
                         <p>توسعه وب با استانداردهای جهانی ما با استفاده از فریم ورک های مدرن مانند next.js و طراحی واکنش گراوبسایت هایی میسازیم که هم از نظر عملکرد و هم تجربه در سطح بالایی قرار دارند تمرکز ما در امنیت سرعت.و قابلیت توسعه پذیری است تا پروژه شما آماده رشد و رقابت جهانی باشد</p>
@@ -248,7 +248,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color3 d-flex">
-                            <img src="assets/images/services/illustration.svg" alt="illustration">
+                            <img src="rvices/illustration.svg" alt="illustration">
                         </div>
                         <h3>طراحی</h3>
                         هر پروژه برای من یه بوم خالیه که با ترکیب رنگ، فرم و حس، تبدیلش می‌کنم به اثری که هم چشم‌نوازه، هم هدفمند. از طراحی لوگو و کارت ویزیت تا پست‌های شبکه‌های اجتماعی، همه چیز با دقت، سبک مدرن و هویت برند شما شکل می‌گیره. چون طراحی فقط زیبایی نیست—داستان گفتنه.
@@ -361,9 +361,9 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="https://unpkg.com/scrollreveal"></script>
 <script src="https://cdn.jsdelivr.net/gh/cferdinandi/gumshoe/dist/gumshoe.polyfills.min.js"></script>
-<script src="assets/js/owl.carousel.js"></script>
-<script src="assets/js/validate.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="owl.carousel.js"></script>
+<script src="validate.js"></script>
+<script src="main.js"></script>
 <script>
     $(document).ready(function () {
         $("#basic-form").validate();
