--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="carousel.css">
     <link rel="stylesheet" href="green.css">
+    <link rel="stylesheet" herf="owl.carousel.js">
+    <link rel="stylesheet" herf="script.js">
+    <link rel="stylesheet" herf="min.js">
+    <link rel="stylesheet" herf="validate.js">
+    <link rel="stylesheet" herf="main.js">
+    <link rel="stylesheet" herf="">
+    <link rel="stylesheet" herf="">
+    <link rel="stylesheet" herf="">
 
 </head>
 
@@ -358,7 +366,7 @@
         <img src="assets/images/uparrow.svg" alt="arrow up">
     </a>
 </body>
-<script src="assets/js/jquery.min.js"></script>
+<script src="min.js"></script>
 <script src="https://unpkg.com/scrollreveal"></script>
 <script src="https://cdn.jsdelivr.net/gh/cferdinandi/gumshoe/dist/gumshoe.polyfills.min.js"></script>
 <script src="owl.carousel.js"></script>
