--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <img src="assets/images/uparrow.svg" alt="arrow up">
     </a>
 </body>
-<script src="min.js"></script>
+<script src="jquery.min.js"></script>
 <script src="https://unpkg.com/scrollreveal"></script>
 <script src="https://cdn.jsdelivr.net/gh/cferdinandi/gumshoe/dist/gumshoe.polyfills.min.js"></script>
 <script src="owl.carousel.js"></script>
