--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div class="social">
                             <ul>
                                 <li class="social-icon"><a href="http://www.instagram.com/tagm_aster2025"><img
-                                            src="feather_instagram.svg" alt=""></a>
+                                            src="instagram.svg" alt=""></a>
                                 </li>
                         </div>
                     </div>
@@ -323,7 +323,7 @@
                 <div class="footer-bottom d-flex">
                     <p class="copyright">همه جای ایران سرای من است ؛ که نیک و بدش برای من است<a href="https://www.instagram.com"></a></p>
                     <div class="footer-social">
-                        <a href="http://www.instagram.com/tagm_aster2025" class="footer-social"><img src="feather_instagram.svg"
+                        <a href="http://www.instagram.com/tagm_aster2025" class="footer-social"><img src="instagram.svg"
                                 alt="instagram"></a>
                     </div>
                 </div>
