--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <div class="footer-bottom d-flex">
                     <p class="copyright">همه جای ایران سرای من است ؛ که نیک و بدش برای من است<a href="https://www.instagram.com"></a></p>
                     <div class="footer-social">
-                        <a href="http://www.instagram.com/tagm_aster2025" class="footer-social"><img src="feather_instagram.svg"
+                        <a href="http://www.instagram.com/tagm_aster2025" class="footer-social"><img src="InShot_۲۰۲۴۱۱۱۷_۰۰۴۰۵۵۶۸۵.jpg"
                                 alt="instagram"></a>
                     </div>
                 </div>
