--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <span id="text"></span><span class="cursor">|</span>
   </div>
                   <!-- toggle icon -->
-                <a href="javascript:void(0)" class="burger">
+                <a href="javascript" class="burger">
                     <span class="one"></span>
                     <span class="two"></span>
                     <span class="three"></span>
