--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <span id="text"></span><span class="cursor">|</span>
   </div>
                   <!-- toggle icon -->
-                <a href="javascript" class="burger">
+                <a href="" class="burger">
                     <span class="one"></span>
                     <span class="two"></span>
                     <span class="three"></span>
@@ -232,7 +232,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color1 d-flex">
-                            <img src="services/ui-design.svg" alt="ui design">
+                            <img src="ui-design.svg" alt="ui design">
                         </div>
                         <h3>طراحی UI/UX</h3>
                         <p>با طراحی رابط کاربری (UI) زیبا و تجربه کاربری (UX) هوشمند، کاری می‌کنم که بازدیدکننده‌ها نه‌تنها بمونن، بلکه عاشق تعامل با سایت یا اپلیکیشن شما بشن. از وایرفریم تا طراحی نهایی، همه چیز با دقت، سادگی و جذابیت انجام می‌شه تا برند شما بدرخشه.</p>
@@ -240,7 +240,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color2 d-flex">
-                            <img src="services/web-dev.svg" alt="web dev">
+                            <img src="web-dev.svg" alt="web dev">
                         </div>
                         <h3>توسعه وب</h3>
                         <p>توسعه وب با استانداردهای جهانی ما با استفاده از فریم ورک های مدرن مانند next.js و طراحی واکنش گراوبسایت هایی میسازیم که هم از نظر عملکرد و هم تجربه در سطح بالایی قرار دارند تمرکز ما در امنیت سرعت.و قابلیت توسعه پذیری است تا پروژه شما آماده رشد و رقابت جهانی باشد</p>
@@ -248,7 +248,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color3 d-flex">
-                            <img src="rvices/illustration.svg" alt="illustration">
+                            <img src="illustration.svg" alt="illustration">
                         </div>
                         <h3>طراحی</h3>
                         هر پروژه برای من یه بوم خالیه که با ترکیب رنگ، فرم و حس، تبدیلش می‌کنم به اثری که هم چشم‌نوازه، هم هدفمند. از طراحی لوگو و کارت ویزیت تا پست‌های شبکه‌های اجتماعی، همه چیز با دقت، سبک مدرن و هویت برند شما شکل می‌گیره. چون طراحی فقط زیبایی نیست—داستان گفتنه.
@@ -256,7 +256,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color4 d-flex">
-                            <img src="assets/images/services/seo.svg" alt="SEO ">
+                            <img src="seo.svg" alt="SEO ">
                         </div>
                         <h3>سئو </h3>
                         با سئوی اصولی، کاری می‌کنم که سایت شما نه‌تنها دیده بشه، بلکه در نتایج گوگل بدرخشه. از تحقیق کلمات کلیدی تا بهینه‌سازی سرعت و ساختار صفحات، همه چیز با هدف افزایش بازدید و تبدیل مخاطب به مشتری انجام می‌شه. چون دیده شدن، نصف راه موفقیته.
